# p2sn

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  client.py  pyproject.toml  requirements.txt  requirements_dev.txt  server.py  setup.cfg  setup.py  standard.md  tox.ini
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  issue-before-pr.md
.github/workflows/: codeql-analysis.yml  linting.yml  tests.yml
src/p2sn/: __init__.py  __main__.py
tests/: test_p2sn.py
