[metadata]
name = p2sn
description = Peer to peer socket network
author = Koviubi56
license = GNU LGPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
# -----START OF CLASSIFIERS-----
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
# -----END OF CLASSIFIERS-----

[options]
packages =
    p2sn
install_requires =
    rsa >= 4.8
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest >= 6.2.5

[options.package_data]
p2sn = py.typed
