[metadata]
name = p2sn
version = attr: p2sn.__version__
description = Peer to peer socket network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/p2sn
author = Koviubi56
author_email = koviubi56@duck.com
license = LGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = p2p, peer2peer, socket, network, sockets, rsa, encryption

[options]
packages =
    p2sn
install_requires =
    rsa>=4.8
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2.5

[options.package_data]
p2sn = py.typed
